--- a/admin_area/css/style.css
+++ b/admin_area/css/style.css
@@ -1,390 +1,399 @@
-@import url("https://fonts.googleapis.com/css?family=Barlow+Condensed:100,200,300,400,500,600,700,800,900|Barlow+Semi+Condensed:100,200,300,400,500,600,700,800,900|Barlow:100,200,300,400,500,600,700,800,900&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed:100,200,300,400,500,600,700,800,900|Barlow+Semi+Condensed:100,200,300,400,500,600,700,800,900|Barlow:100,200,300,400,500,600,700,800,900&display=swap');
 
-body{
-    margin-top: 100px;
-    background: #f5f6fa;
-    color: #B1B2D6;
-    font-family: "Barlow",
-    sans-serif;;
+body {
+  margin-top: 100px;
+  background: #f5f6fa;
+  color: #b1b2d6;
+  font-family: 'Barlow', sans-serif;
 }
 
-#wrapper{
-    padding-left: 0px;
+#wrapper {
+  padding-left: 0px;
 }
 
-.top-nav{
-    padding:0 15px;
-    background-color: #f5f6fa;
+.top-nav {
+  padding: 0 15px;
+  background-color: #f5f6fa;
 }
 
-.navbar{ 
-    background-color: #f5f6fa;
-    border-color: #f5f6fa;
+.navbar {
+  background-color: #f5f6fa;
+  border-color: #f5f6fa;
 }
 
-.navbar-inverse .navbar-nav>li>a {
-    color: #10182F;
+.navbar-inverse .navbar-nav > li > a {
+  color: #10182f;
 }
 
-.navbar-inverse .navbar-nav>li>a:hover {
-    color: #6a89cc;
+.navbar-inverse .navbar-nav > li > a:hover {
+  color: #6a89cc;
 }
 
-.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
-    border: none;
+.navbar-inverse .navbar-collapse,
+.navbar-inverse .navbar-form {
+  border: none;
 }
 
-.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle {
-    background-color: #aab4e0;
-    color: #B1B2D6;
+.navbar-inverse .navbar-toggle:focus,
+.navbar-inverse .navbar-toggle {
+  background-color: #aab4e0;
+  color: #b1b2d6;
 }
 .navbar-inverse .navbar-toggle {
-    border-color: #aab4e0;
+  border-color: #aab4e0;
 }
 
 .navbar-inverse .navbar-toggle:hover {
-    background-color: #343549;
-    color: #B1B2D6;
-    opacity: 0.7;
+  background-color: #343549;
+  color: #b1b2d6;
+  opacity: 0.7;
 }
 /*end Top Navigation*/
 
 .page-header {
-    color: #10182F;
+  color: #10182f;
 }
 
 .panel {
-    background: white;
-    border:none;
+  background: white;
+  border: none;
 }
 
 .panel-body {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    border-radius: 10px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  border-radius: 10px;
 }
 
-.panel .panel-primary{
-    background: #f5f6fa;
-    transition: 1s all ease;
-    border: 1px solid #f5f6fa; /* khung hinh anh */
-    border: none;
+.panel .panel-primary {
+  background: #f5f6fa;
+  transition: 1s all ease;
+  border: 1px solid #f5f6fa; /* khung hinh anh */
+  border: none;
 }
 
 .panel-primary .panel-heading {
-    background: #171831;
-    border-color: #f2f2f6;
-    color: white;
-
+  background: #171831;
+  border-color: #f2f2f6;
+  color: white;
 }
 
 .panel-footer {
-    background-color: #10182F;
-    border: none;
-    padding: 8px;
+  background-color: #10182f;
+  border: none;
+  padding: 8px;
 }
 
 .panel-footer a {
-    color: white;
-    border: none;
-
+  color: white;
+  border: none;
 }
 .row .breadcrumb span {
-    text-transform: uppercase;
-    color: #ffffff;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
 .row .breadcrumb {
-    background: #f5f6fa;
-    color: #B1B2D6;
+  background: #f5f6fa;
+  color: #b1b2d6;
 } /* Ban dieu khien */
 
-.breadcrumb>.active {
-    color: #171831;
+.breadcrumb > .active {
+  color: #171831;
 }
-.panel-default>.panel-heading {
-    color: #171831;
-    background: #f5f6fa;
-    border-color: #f5f6fa;
+.panel-default > .panel-heading {
+  color: #171831;
+  background: #f5f6fa;
+  border-color: #f5f6fa;
 } /* Xem */
 
-#page-wrapper{
-    width: 100%;
-    background-color: #f5f6fa;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+#page-wrapper {
+  width: 100%;
+  background-color: #f5f6fa;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-@media (min-width: 768px){
-    body{
-        margin-top: 50px;
-}
+@media (min-width: 768px) {
+  body {
+    margin-top: 50px;
+  }
 
-    #wrapper{
-        padding-left: 255px;
-}
+  #wrapper {
+    padding-left: 255px;
+  }
 
-    #page-wrapper{
-        padding: 10px;
-}
+  #page-wrapper {
+    padding: 10px;
+  }
 }
 
 .form-control {
-    display: block;
-    width: 100%;
-    height: 34px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #10182F;
-    background-color: white;
-    background-image: none;
-    border: solid 1px #d1d8f1;
-    border-radius: 4px;
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #10182f;
+  background-color: white;
+  background-image: none;
+  border: solid 1px #d1d8f1;
+  border-radius: 4px;
 }
 
-.dropdown-menu>li>a:hover {
-    color: #6a89cc;
+.dropdown-menu > li > a:hover {
+  color: #6a89cc;
 }
 
-.btn-primary{
-    background: #10182F;
-    border: none;
-    color: white;
+.btn-primary {
+  background: #10182f;
+  border: none;
+  color: white;
 }
 
-.btn-primary:hover{
-    background: rgba(16, 24, 47, 0.8);
+.btn-primary:hover {
+  background: rgba(16, 24, 47, 0.8);
 }
-.top-nav>li{
-    /*float: left;*/
-    display: inline-block;
-}
-
-.top-nav>li>a{
-    color: #B1B2D6;
-    line-height: 20px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+.top-nav > li {
+  /*float: left;*/
+  display: inline-block;
 }
 
-.top-nav>li>a:hover{
-    color: #6a89cc;
+.top-nav > li > a {
+  color: #b1b2d6;
+  line-height: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
-.top-nav>li>a:hover, .top-nav>li>a:focus{
-    color: #6a89cc;
+.top-nav > li > a:hover {
+  color: #6a89cc;
+}
+
+.top-nav > li > a:hover,
+.top-nav > li > a:focus {
+  color: #6a89cc;
 }
 
 /* Sidebar*/
-@media (min-width: 768px){
-    .side-nav{
-        position: fixed;
-        top: 51px;
-        bottom: 0;
-        width: 255px;
-        overflow-y: auto;
-        overflow-x: hidden;
-        background-color: #dfdff3; /* list menu */
-        padding-bottom: 40px;
-        border-top-left-radius: 10px;
-    }
+@media (min-width: 768px) {
+  .side-nav {
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    width: 255px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background-color: #dfdff3; /* list menu */
+    padding-bottom: 40px;
+    border-top-left-radius: 10px;
+  }
 
-  .side-nav::-webkit-scrollbar-thumb{
-
+  .side-nav::-webkit-scrollbar-thumb {
     background: #171831;
   }
 
-  .side-nav::-webkit-scrollbar{
+  .side-nav::-webkit-scrollbar {
     background-color: #cfcfeb;
     width: 0px;
   }
-  .side-nav::-webkit-scrollbar-track{
+  .side-nav::-webkit-scrollbar-track {
     box-shadow: inset 0 0 10px #cfcfeb;
     border-radius: 14px;
   }
-  .side-nav::-webkit-scrollbar-thumb{
+  .side-nav::-webkit-scrollbar-thumb {
     background-color: #cfcfeb;
     border-radius: 10px;
   }
 
-    .side-nav>li>a{
-        width: 255px;
-    }
-    .side-nav>li>a:hover{
-        outline: none;
-        background-color: #fefefe !important;
-    }
+  .side-nav > li > a {
+    width: 255px;
+  }
+  .side-nav > li > a:hover {
+    outline: none;
+    background-color: #fefefe !important;
+  }
 
-    .side-nav>li>a:focus{
-        background: none;
-    }
+  .side-nav > li > a:focus {
+    background: none;
+  }
 }
 
-.side-nav>li>ul{
-    padding: 0;
-    background: #cfcfeb;
+.side-nav > li > ul {
+  padding: 0;
+  background: #cfcfeb;
 }
 
-.side-nav>li>ul>li>a{
-    padding: 10px 15px 10px 38px;
-    text-decoration: none;
-    color: white;
-    display: block;
+.side-nav > li > ul > li > a {
+  padding: 10px 15px 10px 38px;
+  text-decoration: none;
+  color: white;
+  display: block;
 }
 
-.side-nav>li>ul>li>a:hover{
-    color: #a89edf;
+.side-nav > li > ul > li > a:hover {
+  color: #a89edf;
 }
-
 
 /*Color For Panel*/
-.huge{
-    font-size: 40px;
-    line-height: normal;
+.huge {
+  font-size: 40px;
+  line-height: normal;
 }
 
-.panel-green{
-    border-color: #5cd85c;
+.panel-green {
+  border-color: #5cd85c;
 }
 
-.panel-green>.panel-heading{
-    color: #ffffff;
-    background-color: #8bbe86;
+.panel-green > .panel-heading {
+  color: #ffffff;
+  background-color: #8bbe86;
 }
 
-.panel-green>a{
-    color: #8bbe86;
+.panel-green > a {
+  color: #8bbe86;
 }
 
-.panel-green>a:hover{
-    color: #49a349;
+.panel-green > a:hover {
+  color: #49a349;
 }
-.panel-orange{
-    border-color: #f0ad4e;
-}
-
-.panel-orange>.panel-heading{
-    color: #ffffff;
-    background-color: #f0ad4e;
+.panel-orange {
+  border-color: #f0ad4e;
 }
 
-.panel-orange>a{
-    color: #f0ad4e;
+.panel-orange > .panel-heading {
+  color: #ffffff;
+  background-color: #f0ad4e;
 }
 
-.panel-orange>a:hover{
-    color: #b88b4c;
+.panel-orange > a {
+  color: #f0ad4e;
 }
 
-.panel-red{
-    border-color: #d9534f;
+.panel-orange > a:hover {
+  color: #b88b4c;
 }
 
-.panel-red>.panel-heading{
-    color: #ffffff;
-    background-color: #d86460;
+.panel-red {
+  border-color: #d9534f;
 }
 
-.panel-red>a{
-    color: #d9534f;
+.panel-red > .panel-heading {
+  color: #ffffff;
+  background-color: #d86460;
 }
 
-.panel-red>a:hover{
-    color: #8d4341;
+.panel-red > a {
+  color: #d9534f;
+}
+
+.panel-red > a:hover {
+  color: #8d4341;
 }
 
 /*  Admin Profile Styling  */
 
-.panel-body{
-    border-radius: 5px;
+.panel-body {
+  border-radius: 5px;
 }
 
-.thumb-info{
-    position: relative;
+.thumb-info {
+  position: relative;
 }
 
-.rounded{
-    border-radius: 10px;
+.rounded {
+  border-radius: 10px;
 }
 
-hr{
-    border: 0;
-    height: 1px;
-    margin: 10px 0 10px 0;
+hr {
+  border: 0;
+  height: 1px;
+  margin: 10px 0 10px 0;
 }
 
-hr.dotted{
-    border-bottom: 1px #dddddd dotted;
-    height: 0px;
-    margin: 10px 0 10px 0;
+hr.dotted {
+  border-bottom: 1px #dddddd dotted;
+  height: 0px;
+  margin: 10px 0 10px 0;
 }
 
 .thumb-info .thumb-info-title {
-    background: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
-    bottom: 10%;
-    color: #45458b;
-    font-size: 18px;
-    font-weight: 600;
-    left: 0;
-    letter-spacing: -1px;
-    padding: 9px 11px 9px;
-    position: absolute;
-    text-transform: uppercase;
-    z-index: 1;
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
+  bottom: 10%;
+  color: #45458b;
+  font-size: 18px;
+  font-weight: 600;
+  left: 0;
+  letter-spacing: -1px;
+  padding: 9px 11px 9px;
+  position: absolute;
+  text-transform: uppercase;
+  z-index: 1;
 }
 
-.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
-    border-radius: 4px;
+.carousel-inner > .item > a > img,
+.carousel-inner > .item > img,
+.img-responsive,
+.thumbnail a > img,
+.thumbnail > img {
+  border-radius: 4px;
 }
 
-.thumb-info .thumb-info-inner{
-    display: block;
+.thumb-info .thumb-info-inner {
+  display: block;
 }
 
-.thumb-info .thumb-info-type{
-    background: #0088cc;
-    display: inline-block;
-    border-radius: 2px;
-    /*float: left;*/
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 0;
-    margin: 8px -2px -15px -2px;
-    padding: 2px 9px;
-    text-transform: none;
+.thumb-info .thumb-info-type {
+  background: #0088cc;
+  display: inline-block;
+  border-radius: 2px;
+  /*float: left;*/
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0;
+  margin: 8px -2px -15px -2px;
+  padding: 2px 9px;
+  text-transform: none;
 }
 
-.widget-content-expanded{
-    font-size: 15px;
+.widget-content-expanded {
+  font-size: 15px;
 }
 
-.widget-content-expanded span{
-    font-weight: 600;
+.widget-content-expanded span {
+  font-weight: 600;
 }
 
-.widget-content-expanded i{
-    color: #0088cc;
-    margin-right: 5px;
+.widget-content-expanded i {
+  color: #0088cc;
+  margin-right: 5px;
 }
 
-  textarea.form-control {
-    height: auto;
-    color: #10182F;
+textarea.form-control {
+  height: auto;
+  color: #10182f;
 }
 
-
-
-.table-bordered>tbody>tr>td, .table-bordered>tbody>tr>th, .table-bordered>tfoot>tr>td, .table-bordered>tfoot>tr>th, .table-bordered>thead>tr>td{
-    border: 2px solid pink;
-    background: white;
-    color: #10182F;
-    border: none;
+.table-bordered > tbody > tr > td,
+.table-bordered > tbody > tr > th,
+.table-bordered > tfoot > tr > td,
+.table-bordered > tfoot > tr > th,
+.table-bordered > thead > tr > td {
+  border: 2px solid pink;
+  background: white;
+  color: #10182f;
+  border: none;
 }
 
-.table-bordered>tbody>tr>td, .table-bordered>tbody>tr>th, .table-bordered>tfoot>tr>td, .table-bordered>tfoot>tr>th, .table-bordered>thead>tr>td, .table-bordered>thead>tr>th {
-    border: 1px solid #ddd;
+.table-bordered > tbody > tr > td,
+.table-bordered > tbody > tr > th,
+.table-bordered > tfoot > tr > td,
+.table-bordered > tfoot > tr > th,
+.table-bordered > thead > tr > td,
+.table-bordered > thead > tr > th {
+  border: 1px solid #ddd;
 }
 /*
 .table-bordered {
@@ -396,26 +405,42 @@ hr.dotted{
 }
 */
 
-  .active {
-      text-transform: uppercase;
-  }
+.active {
+  text-transform: uppercase;
+}
 
-  .table_img {
-      text-align: center;
-  }
-  
-  .table_img img {
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
-    object-fit: cover;
-  }
+.table_img {
+  text-align: center;
+}
 
-  th, td {
-      text-align: center;
-  }
+.table_img img {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  object-fit: cover;
+}
 
-  .btn-confim {
-      background-color: #0088cc;
-      margin-bottom: 5px;
-  }
+th,
+td {
+  text-align: center;
+}
+
+.btn-confim {
+  background-color: #0088cc;
+  margin-bottom: 5px;
+}
+.swal2-backdrop-show .swal2-popup {
+  width: 50em !important;
+  padding: 3.25em 0 3.25em !important;
+}
+.swal2-html-container{
+    font-size: 18px !important;
+}
+.swal2-confirm{
+    padding: 0.825em 4.1em !important;
+}
+.swal2-title{
+  font-size: 2.875em !important;
+  color: #9DE0F6;
+
+}
